# solana-learn

./: Cargo.toml  flake.nix
core-concepts/account/01-create-address/: Cargo.toml
core-concepts/account/01-create-address/src/: main.rs
core-concepts/account/01-create-keypair/src/: main.rs
core-concepts/account/02-get-account-info/: Cargo.toml
core-concepts/account/02-get-account-info/src/: main.rs
core-concepts/account/03-create-mint-account/: Cargo.toml
core-concepts/account/03-create-mint-account/src/: main.rs
core-concepts/account/04-create-wallet-account/: Cargo.toml
core-concepts/account/04-create-wallet-account/src/: main.rs
core-concepts/account/05-get-sysvar-info/: Cargo.toml
core-concepts/account/05-get-sysvar-info/src/: main.rs
