[workspace]
resolver = "2"
members = [
  "core-concepts/account/01-create-address",
  "core-concepts/account/02-get-account-info",
  "core-concepts/account/03-create-mint-account",
]

[workspace.package]
version = "0.0.0"
# https://doc.rust-lang.org/edition-guide/rust-2024/index.html
edition = "2024"

[workspace.dependencies]
solana-sdk = "3.0.0"
solana-client = "3.1.4"
solana-commitment-config = "3.1.0"
solana-system-interface = "3.0.0"
spl-token-2022-interface = "2.1.0"

tokio = "1.48.0"
anyhow = "1.0.100"
