[package]
name = "create-wallet-account"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }

anyhow = { workspace = true }
