[package]
name = "get-sysvar-info"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-system-interface = { workspace = true, features = ["bincode"] }
spl-token-2022-interface = { workspace = true }

anyhow = { workspace = true }
bincode = { workspace = true }
